fix: add spacing

--- a/trs-gatsby/src/scss/layout.scss
+++ b/trs-gatsby/src/scss/layout.scss
@@ -142,3 +142,7 @@ body .slideshow-modal {
 .react-slideshow-fade-wrapper .react-slideshow-fade-images-wrap > div {
   text-align: center;
 }
+
+#articles-list {
+  margin-top: 48px;
+}
